--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -52,7 +52,7 @@
       "cell_type": "code",
       "source": [
         "# Read in csv file\n",
-        "df = pd.read_csv(\"https://raw.githubusercontent.com/KalyaniGanta/meh/main/Dallas-Fort%20Worth%20Metropolitan%20Area%20Weather%20Events%202016-2021.csv\")\n",
+        "df = pd.read_csv(\"https://raw.githubusercontent.com/AubreyFeldker/CS4375TeamProject/main/Dallas-Fort%20Worth%20Metropolitan%20Area%20Weather%20Events%202016-2021.csv")\n",
         "\n",
         "# Removing Time and Date Columns since Timestamp covers both\n",
         "df = df.drop(['Time(UTC)', 'Date'], axis = 1)\n"
